syntax = "proto3";

package user;

option go_package = "github.com/LavaJover/shvark-user-service/proto/gen;userpb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse);
    rpc GetUserByLogin (GetUserByLoginRequest) returns (GetUserByLoginResponse);
}

message CreateUserRequest {
    string login = 1;
    string username = 2;
    string password = 3;
}

message CreateUserResponse {
    string user_id = 1;
}

message GetUserByIDRequest {
    string user_id = 1;
}

message GetUserByIDResponse {
    string user_id = 1;
    string username = 2;
    string login = 3;
    string password = 4;
}

message GetUserByLoginRequest {
    string login = 1;
}

message GetUserByLoginResponse {
    string user_id = 1;
    string login = 2;
    string username = 3;
    string password = 4;
}